--- a/package.json
+++ b/package.json
@@ -41,7 +41,8 @@
     "rxjs": "~7.8.0",
     "sass": "^1.57.1",
     "tslib": "^2.3.0",
-    "zone.js": "~0.12.0"
+    "zone.js": "~0.14.7",
+    "ngx-permissions": "^13.0.1"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^17.0.6",
